# stock-widget

./: BUILD-WINDOWS.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml  main.yml
scripts/: build-all.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  stock_api.rs
src/components/: KlineChart.vue  MinuteChart.vue  QuoteList.vue  StockManager.vue  TitleBar.vue
src/stores/: stock.ts
src/styles/: main.css
src/types/: index.ts
